feat : 테크 페이지,디자인 페이지 파일 추가

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SPA with Vanilla JS</title>
+    <title>TOSS-TECH SPA APP</title>
   </head>
   <body>
-    <h1>환경설정 테스트</h1>
+    <nav class="nav">
+      <a href="/" class="nav__link" data-link>테크</a>
+      <a href="/design" class="nav__link" data-link>디자인</a>
+    </nav>
+    <div id="app"></div>
   </body>
 </html>
